[project]
name = "css"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Deufel", email = "MDeufel13@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "apsw>=3.51.3.0",
    "marimo-css>=0.1.1",
    "py-sse>=0.1.0",
]

classifiers = ["Private :: Do Not Upload"]

[tool.uv]
default-groups = ["dev", "mike"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "ngrok>=1.7.0",
]
mike = [
    "html-tags>=0.0.7",
    "marimo-dev>=0.3.1",
]
